; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_string.c_incrbyCommand.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_string.c_incrbyCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }

@C_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @incrbyCommand(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 2
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @getLongLongFromObjectOrReply(%struct.TYPE_5__* %4, i32 %9, i64* %3, i32* null)
  %11 = load i64, i64* @C_OK, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  br label %18

14:                                               ; preds = %1
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %16 = load i64, i64* %3, align 8
  %17 = call i32 @incrDecrCommand(%struct.TYPE_5__* %15, i64 %16)
  br label %18

18:                                               ; preds = %14, %13
  ret void
}

declare dso_local i64 @getLongLongFromObjectOrReply(%struct.TYPE_5__*, i32, i64*, i32*) #1

declare dso_local i32 @incrDecrCommand(%struct.TYPE_5__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
